# esp32-s3-box-demo

example_extra_app/esp-box/examples/extra_app/: partitions_en.csv  sdkconfig  sdkconfig.old  sdkconfigs
example_extra_app/esp-box/examples/extra_app/main/: demo_main.c  sr_handler.c
example_factory/esp-box/examples/factory_demo/: sdkconfig  sdkconfig.old
example_front_desk/esp-cube/esp-box/components/json_parser/: CMakeLists.txt  json_parser.c
example_front_desk/esp-cube/esp-box/examples/box_front_desk/: sdkconfig  sdkconfig.old
example_front_desk/esp-cube/esp-box/examples/box_front_desk/components/JPEG/: CMakeLists.txt
example_front_desk/esp-cube/esp-napt-example/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults  sdkconfig.old
example_front_desk/esp-cube/esp-napt-example/main/: Kconfig.projbuild  main.c
example_front_desk/esp-cube/jpeg_transfer_demo/examples/cam_receiver/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
example_front_desk/esp-who/components/modules/: CMakeLists.txt
example_meeting/esp-adf-internal/components/audio_recorder/: audio_recorder.c  recorder_encoder.c  recorder_sr.c
example_meeting/esp-adf-internal/components/audio_stream/: http_stream.c
example_meeting/esp-box-cont/examples/meeting_cont/: partitions_cn.csv  partitions_en.csv  sdkconfig  sdkconfig.old
example_meeting/esp-box-single/examples/meeting/: sdkconfig  sdkconfig.old
example_meeting/esp-now/from_another/: CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old
example_meeting/esp-now/from_another/main/: CMakeLists.txt  demo_main.c  espnow_cube.c  espnow_example_main.c
example_meeting/esp-who/web_camera/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32  sdkconfig.defaults.esp32s2  sdkconfig.defaults.esp32s3  sdkconfig.defaults.esp32s3_opi  sdkconfig.old
example_meeting/esp-who/web_camera/main/: CMakeLists.txt  Kconfig.projbuild  app_camera.h  main.c
example_meeting/esp-who/web_camera/main/web_camera/: app_httpd.c  app_main.c  app_wifi.c
(+189 files in other folders)
